--- a/index.html
+++ b/index.html
@@ -192,21 +192,151 @@ const cambistatData = {
 
 /* 3. Species → Category (short version; you can paste full list here) */
 const speciesToCategory = {
-  "Acacia":"F",
-  "Ailanthus":"D",
-  "Alder":"F",
-  "Anaqua":"E",
-  "Arborvitae":"F",
-  "Ash":"F",
-  "Aspen":"F",
-  "California Pepper":"C",
-  "Boxelder":"A",
-  "Crape Myrtle":"B",
-  "Oak - Live (<10”)":"B",
-  "Oak - Live (>10”)":"E",
-  "Zelkova":"B"
-  // Add the rest of your big list here if you want 1:1
+  "Acacia": "F",
+  "Ailanthus": "D",
+  "Alder": "F",
+  "Anaqua": "E",
+  "Arborvitae": "F",
+  "Ash": "F",
+  "Aspen": "F",
+  "Australian Bottle": "C",
+  "Australian Pine": "A",
+  "Bald Cypress": "F",
+  "Banyan - Ficus": "F",
+  "Basswood, American": "A",
+  "Baytree": "E",
+  "Beech": "E",
+  "Birch": "F",
+  "Bischofia": "F",
+  "Black Gum / Tupelo": "B",
+  "Black Olive": "F",
+  "Bottlebrush": "F",
+  "Boxelder": "A",
+  "Buckeye": "D",
+  "Buttonwood": "F",
+  "California Pepper": "C",
+  "Camphor": "E",
+  "Catalpa": "E",
+  "Cedar – Deodora": "E",
+  "Cedar - all others": "F",
+  "Cherry - Black": "F",
+  "Cherry - Ornamental": "E",
+  "Cherry - Laurel": "E",
+  "Chinaberry": "E",
+  "Chinese Pistache": "E",
+  "Cottonwood*": "F",
+  "Crabapple": "F",
+  "Crape Myrtle": "B",
+  "Cryptomeria": "F",
+  "Cypress": "B",
+  "Ebony - Texas": "F",
+  "Elm - Cedar": "B",
+  "Elm - Chinese/Lacebark": "A",
+  "Elm - Siberian": "A",
+  "Elm - (all others)": "B",
+  "Eucalyptus": "F",
+  "Ficus": "F",
+  "Fir": "F",
+  "Ginkgo": "F",
+  "Gumbo Limbo": "F",
+  "Hackberry": "F",
+  "Hawthorn": "C",
+  "Hickory": "E",
+  "Holly - American": "E",
+  "Holly – Nellie Stevens": "E",
+  "Holly - Yaupon": "B",
+  "Horsechestnut": "C",
+  "Huisache": "E",
+  "Ironwood / Hornbeam": "D",
+  "Jacaranda": "F",
+  "Japanese Tree Lilac": "E",
+  "Juniper": "F",
+  "Katsura - Japanese": "A",
+  "Larch": "F",
+  "Laurel": "F",
+  "Leyland Cypress": "F",
+  "Linden": "A",
+  "Locust - Black": "F",
+  "Locust - Honey": "E",
+  "Lombardy Poplar": "F",
+  "Lysiloma": "F",
+  "Magnolia": "F",
+  "Mahogany": "F",
+  "Maple - Amur": "B",
+  "Maple - Bigleaf": "D",
+  "Maple - Japanese (caution)**": "A",
+  "Maple - Norway": "B",
+  "Maple - Red": "B",
+  "Maple - Silver": "D",
+  "Maple - Sugar": "B",
+  "Melaleuca": "F",
+  "Mesquite": "F",
+  "Mimosa": "E",
+  "Mountain Ash": "B",
+  "Mulberry": "F",
+  "Oak – Black": "E",
+  "Oak – Blackjack": "E",
+  "Oak – Bur": "D",
+  "Oak - Laurel": "F",
+
+  /* special-case live oak — we handle DBH <10" vs >10" in the calculator */
+  "Oak - Live (<10”)": "B",
+  "Oak - Live (>10”)": "E",
+
+  "Oak - Pin": "E",
+  "Oak - Post": "E",
+  "Oak - Red": "E",
+  "Oak - Sand Shinnery": "E",
+  "Oak - Scarlet": "E",
+  "Oak - Shumard": "E",
+  "Oak - Valley": "F",
+  "Oak - Water": "E",
+  "Oak - White": "D",
+  "Oak - Willow": "E",
+  "Olive - Black": "F",
+  "Olive - European": "E",
+  "Olive - Russian": "E",
+  "Orchid Tree - Hong Kong": "C",
+  "Osage Orange": "F",
+  "Palms": "F",
+  "Paloverde": "E",
+  "Paulownia": "E",
+  "Pear - Ornamental": "F",
+  "Pecan": "E",
+  "Persimmon": "C",
+  "Photinia": "E",
+  "Pines*": "F",
+  "Plum - Ornamental": "E",
+  "Poinciana": "F",
+  "Raintree - Golden": "F",
+  "Redcedar - Eastern": "F",
+  "Redwood": "F",
+  "Rosewood / Tipuana": "C",
+  "Russian Olive": "E",
+  "Saltcedar": "F",
+  "Sassafrass": "E",
+  "Sea Grape": "E",
+  "Soapberry": "E",
+  "Spruce*": "F",
+  "Sugarberry / So. Hackberry": "F",
+  "Sumac - African": "E",
+  "Sycamore": "F",
+  "Tabebuia": "F",
+  "Tallow - Chinese": "F",
+  "Tallowwood": "F",
+  "Tamarisk": "F",
+  "Tepeguaje": "E",
+  "Tulip / Yellow Poplar": "F",
+  "Tupelo / Black Gum": "B",
+  "Walnut": "E",
+  "Waxmyrtle - Pacific": "F",
+  "Willow": "F",
+  "Xylosma": "C",
+  "Yellow Poplar / Tulip": "F",
+  "Yew": "F",
+  "Zelkova": "B"
 };
+
 
 /* 4. Product config — ALL PRODUCTS, more descriptive */
 const productConfig = {
