--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@ const productConfig = {
   hortoil: {
     name: "Hort Oil",
     showSpray: true,
-    labelUrl: "",
+    labelUrl: "labels/RES%20Horticultural%20Oil%20specimen%20label.pdf",
     pests: [
       {id:"2pct", label:"2% solution (heavy scale)", percent:2},
       {id:"1pct", label:"1% solution (maintenance)", percent:1}
@@ -853,7 +853,7 @@ const productConfig = {
   bacastat: {
     name: "Bacastat",
     showSpray: true,
-    labelUrl: "",
+    labelUrl: "labels/Bacastat%20Specimen%20Label.pdf",
     pests: [
       {id:"foliar", label:"Foliar – 2 fl oz / gal (example)", rateFlOzPer100:200}
     ],
@@ -897,7 +897,7 @@ const productConfig = {
   verdurmn: {
     name: "Verdur Mn",
     showSpray: true,
-    labelUrl: "",
+    labelUrl: "labels/Verdur%20Mn%20Specimen%20Label-1.pdf",
     pests: [
       {id:"nutrient", label:"Nutritional – 1 gal / 100 gal", rateFlOzPer100:128}
     ],
